--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congratulations, Yanxi!</li>
 </ul>
 <ul>
-    <li>Yuling has been awarded the prestigious Princeton Honorific Fellowship, 2022. Congratulations, Yuling!</li>
+    <li>Yuling has been awarded the prestigious <a href="https://orfe.princeton.edu/news/orfe-graduate-student-yuling-yan-awarded-procter-fellowship">Princeton Honorific Fellowship</a>, 2022. Congratulations, Yuling!</li>
 </ul>
 <ul>
     <li>I received the <a href="https://sloan.org/fellowships/2022-Fellows">2022 Alfred P. Sloan Research Fellowship</a>.</li>
@@ -175,7 +175,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-19 20:10:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-19 20:15:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
