--- a/Group.html
+++ b/Group.html
@@ -38,6 +38,8 @@
 <ul>
 <li><p>Yanxi Chen (ECE PhD student at Princeton, co-advised with Vincent Poor)</p>
 </li>
+<li><p>Hong Hu (Postdoc, co-advised with Yuting Wei)</p>
+</li>
 <li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
 <li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc, co-advised with Yuting Wei)</p>
@@ -75,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-19 20:15:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-19 20:19:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
