--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2022</h2>
 <ol>
+<li><p><b>Minimax-Optimal Multi-Agent RL in Zero-Sum Markov Games With a Generative Model</b> <br />
+G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  2022. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
 Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/model_based_offline_game.pdf">[paper]</a>
 </p>
@@ -255,7 +259,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-15 10:29:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-20 11:33:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
