--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
-<li><p><b>Reinforcement learning</b>
+<li><p>*Reinforcement learning
 </p>
 <ul>
+<li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in zero-sum Markov games with a generative model,&rdquo;</a> 2022. 
+</p>
+</li>
 <li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> 2022.
 
 
@@ -175,7 +178,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-15 10:29:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-20 11:33:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
