--- a/Publications_year.html
+++ b/Publications_year.html
@@ -71,8 +71,7 @@ Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/asyn_Q_pessim
 </p>
 </li>
 <li><p><b>Pessimistic Q-Learning for Offline Reinforcement Learning: Towards Optimal Sample Complexity</b> <br />
-L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2022. <a href="publications/Pessimistic_Qlearning.pdf">[paper]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in ICML 2022
+L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, ICML 2022. <a href="publications/Pessimistic_Qlearning.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>MagNet: An Open-Source Database for Data-Driven Magnetic Core Loss Modeling</b> <br />
@@ -259,7 +258,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-20 11:33:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-23 10:10:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
