--- a/Publications_year.html
+++ b/Publications_year.html
@@ -71,12 +71,12 @@ Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/asyn_Q_pessim
 </p>
 </li>
 <li><p><b>Pessimistic Q-Learning for Offline Reinforcement Learning: Towards Optimal Sample Complexity</b> <br />
-L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, ICML 2022. <a href="publications/Pessimistic_Qlearning.pdf">[paper]</a>
+L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <i>International Conference on Machine Learning (ICML)</i>, July 2022. <a href="publications/Pessimistic_Qlearning.pdf">[paper]</a><a href="publications/Pessimistic_Qlearning_ICML.pdf">[ICML version]</a>
 </p>
 </li>
 <li><p><b>MagNet: An Open-Source Database for Data-Driven Magnetic Core Loss Modeling</b> <br />
 H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
-IEEE Applied Power Electronics Conference (APEC), 2022. <a href="https://ieeexplore.ieee.org/abstract/document/9773372/">[paper]</a><a href="https://github.com/PrincetonUniversity/Magnet">[Github repo]</a><a href="https://mag-net.princeton.edu/">[website]</a></p>
+<i>IEEE Applied Power Electronics Conference (APEC)</i>, 2022. <a href="https://ieeexplore.ieee.org/abstract/document/9773372/">[paper]</a><a href="https://github.com/PrincetonUniversity/Magnet">[Github repo]</a><a href="https://mag-net.princeton.edu/">[website]</a></p>
 </li>
 </ol>
 <h2>2021</h2>
@@ -91,7 +91,7 @@ Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_infere
 </p>
 </li>
 <li><p><b>Sample-Efficient Reinforcement Learning Is Feasible for Linearly Realizable MDPs with Limited Revisiting</b> <br />
-G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, NeurIPS 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a><a href="slides/Linear_realizability_slides.pdf">[slides]</a>  
+G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing Systems (NeurIPS)</i>, December 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a><a href="publications/LinearQ_Revisit_NeurIPS.pdf">[NeurIPS version]</a><a href="slides/Linear_realizability_slides.pdf">[slides]</a>  
 </p>
 </li>
 <li><p><b>Policy Mirror Descent for Regularized Reinforcement Learning: A Generalized Framework with Linear Convergence</b> <br />  
@@ -258,7 +258,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 10:10:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-23 12:45:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
