--- a/Teaching.html
+++ b/Teaching.html
@@ -80,7 +80,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 10:10:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-23 12:45:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
