--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
-<li><p>*Reinforcement learning
+<li><p><b>Reinforcement learning</b>
 </p>
 <ul>
 <li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in zero-sum Markov games with a generative model,&rdquo;</a> 2022. 
@@ -178,7 +178,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 10:10:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-23 12:45:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
