--- a/Publications_year.html
+++ b/Publications_year.html
@@ -130,7 +130,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/TC_inference_ICML.pdf">ICML 2020</a>
 </p>
 </li>
-<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a>
+<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
 </p>
 </li>
 <li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 11, pp. 7380-7419, Nov. 2021. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
@@ -148,7 +148,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexTC_NIPS.pdf">NeurIPS 2019</a>
 </p>
 </li>
-<li><p><b>Subspace Estimation from Unbalanced and Incomplete Data Matrices:  $\ell_{2,\infty}$ Statistical Guarantees </b> <br />  C. Cai, G. Li, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 49, no. 2, pp. 944-967, 2021. <a href="publications/unbalanced_PCA.pdf">[paper]</a>
+<li><p><b>Subspace Estimation from Unbalanced and Incomplete Data Matrices:  $\ell_{2,\infty}$ Statistical Guarantees </b> <br />  C. Cai, G. Li, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 49, no. 2, pp. 944-967, 2021. <a href="publications/unbalanced_PCA.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-2/Subspace-estimation-from-unbalanced-and-incomplete-data-matrices--%e2%84%932/10.1214/20-AOS1986.full">[AoS version]</a>
 </p>
 </li>
 <li><p><b>Communication-Efficient Distributed Optimization in Networks with Gradient Tracking and Variance Reduction</b> <br /> B. Li, S. Cen, <u>Y. Chen</u>, Y. Chi,  <i>Journal of Machine Learning Research</i>, vol. 21, no. 180, pp. 1-51, 2020. <a href="https://arxiv.org/abs/1909.05844">[paper]</a><a href="https://github.com/liboyue/Network-Distributed-Algorithm">[code]</a>
@@ -170,7 +170,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexRankOne_AISTATS.pdf">AISTATS 2019</a>
 </p>
 </li>
-<li><p><b>Asymmetry Helps: Eigenvalue and Eigenvector Analyses of Asymmetrically Perturbed Low-Rank Matrices</b> <br /> <u>Y. Chen</u>, C. Cheng, J. Fan, <i>Annals of Statistics</i>, vol. 49, no. 1, pp. 435-458, 2021. <a href="publications/asymmetric_eigens.pdf">[paper]</a><a href="slides/asymmetry_eigs_slides.pdf">[slides]</a>
+<li><p><b>Asymmetry Helps: Eigenvalue and Eigenvector Analyses of Asymmetrically Perturbed Low-Rank Matrices</b> <br /> <u>Y. Chen</u>, C. Cheng, J. Fan, <i>Annals of Statistics</i>, vol. 49, no. 1, pp. 435-458, 2021. <a href="publications/asymmetric_eigens.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-1/Asymmetry-helps--Eigenvalue-and-eigenvector-analyses-of-asymmetrically-perturbed/10.1214/20-AOS1963.full">[AoS version]</a><a href="slides/asymmetry_eigs_slides.pdf">[slides]</a>
 </p>
 </li>
 </ol>
@@ -180,7 +180,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/ImplicitReg_ICML.pdf">ICML 2018</a> 
 </p>
 </li>
-<li><p><b>Spectral Method and Regularized MLE Are Both Optimal for Top-<i>K</i> Ranking</b>  <br />  <u>Y. Chen</u>, J. Fan, C. Ma, K. Wang, <i>Annals of Statistics</i>, vol. 47, no. 4, pp. 2204-2235, August 2019.   <a href="publications/topK_AOS.pdf">[paper]</a><a href="publications/topK.pdf">[Arxiv]</a><a href="slides/topK_slides.pdf">[slides]</a>
+<li><p><b>Spectral Method and Regularized MLE Are Both Optimal for Top-<i>K</i> Ranking</b>  <br />  <u>Y. Chen</u>, J. Fan, C. Ma, K. Wang, <i>Annals of Statistics</i>, vol. 47, no. 4, pp. 2204-2235, August 2019.   <a href="publications/topK_AOS.pdf">[paper]</a><a href="publications/topK.pdf">[Arxiv]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-47/issue-4/Spectral-method-and-regularized-MLE-are-both-optimal-for-top/10.1214/18-AOS1745.full">[AoS version]</a><a href="slides/topK_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>The Likelihood Ratio Test in High-Dimensional Logistic Regression Is Asymptotically a <i>Rescaled</i> Chi-Square</b>  <br />  P. Sur, <u>Y. Chen</u>, E. J. Candes, <i>Probability Theory and Related Fields</i>, vol. 175, no. 1-2, pp.487–558, October 2019.  <a href="publications/LRT_HighDim_PTRF.pdf">[paper]</a><a href="publications/supplement_LRT.pdf">[supplement]</a><a href="slides/LRT_HighDim_slides.pdf">[slides]</a><a href="codes/Code_LRT.zip">[code]</a></p>
@@ -258,7 +258,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 12:45:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-23 13:08:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
