--- a/Publications_year.html
+++ b/Publications_year.html
@@ -158,12 +158,12 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <li><p><b>Inference and Uncertainty Quantification for Noisy Matrix Completion</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <i>Proceedings of the National Academy of Sciences (PNAS)</i>, vol. 116, no. 46, pp. 22931–22937, Nov. 2019 (direct submission). <a href="https://www.pnas.org/content/pnas/116/46/22931.full.pdf">[PNAS version]</a><a href="publications/MC_inference.pdf">[full paper]</a><a href="slides/NoisyMC_Inference_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Noisy Matrix Completion: Understanding Statistical Guarantees for  Convex Relaxation via Nonconvex Optimization</b> <br /> <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, Y. Yan,  <i>SIAM Journal on Optimization</i>, vol. 30, no. 4, pp. 3098–3121, 2020. <a href="https://epubs.siam.org/doi/pdf/10.1137/19M1290000">[paper]</a><a href="publications/NoisyMC.pdf">[Arxiv]</a><a href="slides/NoisyMC_slides.pdf">[slides]</a></p>
+<li><p><b>Noisy Matrix Completion: Understanding Statistical Guarantees for  Convex Relaxation via Nonconvex Optimization</b> <br /> <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, Y. Yan,  <i>SIAM Journal on Optimization</i>, vol. 30, no. 4, pp. 3098–3121, 2020. <a href="publications/NoisyMC.pdf">[paper]</a><a href="https://epubs.siam.org/doi/pdf/10.1137/19M1290000">[SIOPT version]</a><a href="slides/NoisyMC_slides.pdf">[slides]</a></p>
 </li>
 </ol>
 <h2>2018</h2>
 <ol>
-<li><p><b>Gradient Descent with Random Initialization: Fast Global Convergence for Nonconvex Phase Retrieval</b>  <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Mathematical Programming</i>, vol. 176, no. 1-2, pp. 5-37, July 2019.  <a href="publications/random_init_PR_MP.pdf">[paper]</a><a href="publications/random_init_PR.pdf">[Arxiv]</a><a href="slides/random_init_slides.pdf">[slides]</a>
+<li><p><b>Gradient Descent with Random Initialization: Fast Global Convergence for Nonconvex Phase Retrieval</b>  <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Mathematical Programming</i>, vol. 176, no. 1-2, pp. 5-37, July 2019.  <a href="publications/random_init_PR.pdf">[paper]</a><a href="publications/random_init_PR_MP.pdf">[MP version]</a><a href="slides/random_init_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Nonconvex Matrix Factorization from Rank-One Measurements</b> <br />  Y. Li, C. Ma, <u>Y. Chen</u>, Y. Chi,  <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 3, pp. 1928-1950, March 2021. <a href="https://arxiv.org/abs/1802.06286">[paper]</a> 
@@ -258,7 +258,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 13:09:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-23 13:12:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
