--- a/Publications_year.html
+++ b/Publications_year.html
@@ -126,7 +126,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, accepted to <i>Journal of the American Statistical Association</i>, 2020. <a href="publications/BD_noise.pdf">[paper]</a>
 </p>
 </li>
-<li><p><b>Uncertainty Quantification for Nonconvex Tensor Completion: Confidence Intervals, Heteroscedasticity and Optimality</b> <br />  C. Cai,  H. V. Poor, <u>Y. Chen</u>, 2020. <a href="publications/TC_inference.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a> 
+<li><p><b>Uncertainty Quantification for Nonconvex Tensor Completion: Confidence Intervals, Heteroscedasticity and Optimality</b> <br />  C. Cai,  H. V. Poor, <u>Y. Chen</u>, accepted to  <i>IEEE Transactions on Information Theory</i>, 2022. <a href="publications/TC_inference.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a> 
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/TC_inference_ICML.pdf">ICML 2020</a>
 </p>
 </li>
@@ -258,7 +258,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 13:12:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-07 07:33:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
