--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -353,7 +353,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-23 13:12:45 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-07 07:33:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
