--- a/Software.html
+++ b/Software.html
@@ -65,7 +65,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-15 09:24:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-05 10:23:44 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
