--- a/Group.html
+++ b/Group.html
@@ -48,8 +48,6 @@
 </li>
 <li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan)</p>
 </li>
-<li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (Postdoc, co-advised with Jason Lee)</p>
-</li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a> (Postdoc)</p>
@@ -62,6 +60,8 @@
 <li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Assistant professor, Department of Statistics, University of Chicago)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Assistant professor, Center for Statistical Science, Tsinghua University)</p>
+</li>
+<li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> </p>
 </li>
 </ul>
 <h2>Other student visitors</h2>
@@ -77,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-15 09:24:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-05 10:23:44 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
