--- a/Education.html
+++ b/Education.html
@@ -104,7 +104,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-05 10:23:44 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-12 11:39:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
