--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 
 <h2>2022</h2>
 <ol>
-<li><p><b>Minimax-Optimal Multi-Agent RL in Zero-Sum Markov Games With a Generative Model</b> <br />
+<li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
 G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  accepted to <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
 </p>
 </li>
@@ -258,7 +258,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-05 10:23:44 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-12 11:39:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
