--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Reinforcement learning</b>
 </p>
 <ul>
-<li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in zero-sum Markov games with a generative model,&rdquo;</a> 2022 (accepted in part to NeurIPS 2022). 
+<li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> 2022 (accepted in part to NeurIPS 2022). 
 </p>
 </li>
 <li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> 2022.
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-05 10:23:44 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-12 11:39:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
