--- a/Teaching.html
+++ b/Teaching.html
@@ -80,7 +80,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-12 11:39:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-16 22:22:00 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
