--- a/Workshops.html
+++ b/Workshops.html
@@ -45,7 +45,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-12 11:39:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-16 22:22:01 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
