--- a/Publications_year.html
+++ b/Publications_year.html
@@ -81,6 +81,10 @@ H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal
 </ol>
 <h2>2021</h2>
 <ol>
+<li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
+Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
 G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  accepted to <i>Information and Inference: A Journal of the IMA</i>, 2022. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021
@@ -258,7 +262,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-17 08:57:28 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-17 09:10:55 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
