--- a/Publications_year.html
+++ b/Publications_year.html
@@ -55,7 +55,7 @@
 <h2>2022</h2>
 <ol>
 <li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
-G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  accepted to <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
+G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  accepted to <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022 <b>(selected as oral)</b>. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
@@ -87,7 +87,7 @@ Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_infere
 </li>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
 G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  accepted to <i>Information and Inference: A Journal of the IMA</i>, 2022. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021 <b>(selected as spotlight)</b>
 </p>
 </li>
 <li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
@@ -262,7 +262,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-17 09:10:55 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-26 08:04:23 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
