--- a/Teaching.html
+++ b/Teaching.html
@@ -80,7 +80,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-17 09:10:55 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-26 08:04:22 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
