--- a/Workshops.html
+++ b/Workshops.html
@@ -45,7 +45,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-17 09:10:55 HKT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-26 08:04:23 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
