--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> 2021 (accepted in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
+<li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> accepted to Mathematical Programming, 2022 (appeared in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> 2021 (accepted in part to ICML 2021). 
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-26 08:04:22 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-11 09:10:26 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
