--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-11 10:29:09 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-23 08:47:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
