--- a/Publications_year.html
+++ b/Publications_year.html
@@ -98,7 +98,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </p>
 </li>
 <li><p><b>Policy Mirror Descent for Regularized Reinforcement Learning: A Generalized Framework with Linear Convergence</b> <br />  
-W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal contributions) <a href="https://arxiv.org/abs/2105.11066">[paper]</a> 
+W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>SIAM Journal on Optimization</i>, 2023. (*=equal contributions) <a href="https://arxiv.org/abs/2105.11066">[paper]</a> 
 </p>
 </li>
 <li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>,  2021. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
@@ -261,7 +261,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-23 08:47:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-06 11:30:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
