--- a/Publications_year.html
+++ b/Publications_year.html
@@ -52,6 +52,12 @@
 </p>
 </td></tr></table>
 
+<h2>2023</h2>
+<ol>
+<li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
+G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a></p>
+</li>
+</ol>
 <h2>2022</h2>
 <ol>
 <li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
@@ -261,7 +267,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-06 11:30:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-30 11:55:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
