--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
 
 <table class="imgtable"><tr><td>
 <img src="images/photo_Dec2019.jpg" alt="alt text" width="200 px" height="IMGLINKTARGET" />&nbsp;</td>
-<td align="left"><p>I have joined the <a href="https://statistics.wharton.upenn.edu/"> Department of Statistics and Data Science</a> at the Wharton School at University of Pennsylvania since Jan. 2022, with a secondary appointment in <a href="https://www.ese.upenn.edu//"> Electrical and Systems Engineering</a>.  
+<td align="left"><p>I am an associate professor of <a href="https://statistics.wharton.upenn.edu/"> Statistics and Data Science</a> 
+and of <a href="https://www.ese.upenn.edu//"> Electrical and Systems Engineering</a> at 
+ University of Pennsylvania. 
+Before moving to UPenn in 2022,   
 I was an assistant professor of <a href="http://ece.princeton.edu/">Electrical and Computer Engineering</a>, and an associated faculty member of<a href="https://www.cs.princeton.edu/"> Computer Science</a> and <a href="https://www.pacm.princeton.edu/">Applied and Computational Mathematics</a> at Princeton University from 2017 to 2021. 
 Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to 2017, and obtained my Ph.D. in Electrical Engineering at Stanford University in Jan 2015. 
 </p>
-<p><b>Research areas</b>: mathematical data science, statistics, reinforcement learning, optimization, information theory,  and their applications to medical imaging, power electronics, and computational biology.</p>
+<p><b>Research areas</b>: mathematical data science,  statistics, information theory, optimization, reinforcement learning,   and their applications to medical imaging, power electronics, and computational biology.</p>
 <p><b>Contact:</b> <br />
 313 Academic Research Building <br />
 265 South 37th Street, Philadelphia, PA 19104 <br /></p>
@@ -180,7 +183,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-30 11:56:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-12 22:05:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
