--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
+    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin–Madison as an Assistant Professor of Statistics in 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congratulations, Yuling!! </li>
+</ul>
+<ul>
     <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congratulations, Yanxi!</li>
 </ul>
 <ul>
@@ -73,9 +76,6 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods.</li>
 </ul>
-<ul>
-    <li><a href="publications/NPG_reg.pdf"> Our paper on natural policy gradient methods</a> was selected as a finalist for INFORMS George Nicholson Student Paper Competition, 2021. Congratulations, Shicong and Chen!</li>
-</ul> 
 <br>
 </p>
 </td></tr></table>
@@ -162,6 +162,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Spectral methods</b>
 </p>
 <ul>
+<li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> 2023. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a>
+</p>
+</li>
 <li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> 2021. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a>
 
 
@@ -183,7 +186,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-08 15:13:33 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-10 20:41:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
