--- a/index.html
+++ b/index.html
@@ -98,12 +98,6 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </p>
 </li>
 <li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> 2022.
-
-
-
-
-
-
 </p>
 </li>
 <li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> accepted to Mathematical Programming, 2022 (appeared in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
@@ -115,10 +109,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <a href="publications/NPG_reg.pdf">&ldquo;Fast global convergence of natural policy gradient methods with entropy regularization,&rdquo;</a> <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578,  2022 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[ArXiv]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> 2020 (accepted in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
-
-
-</p>
+<li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> accepted to Operations Research, 2023 (accepted in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -186,7 +177,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-10 20:53:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-16 15:53:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
