--- a/Publications_year.html
+++ b/Publications_year.html
@@ -91,12 +91,20 @@ H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal
 </ol>
 <h2>2021</h2>
 <ol>
+<li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, accepted to <i>Mathematical Programming</i>, 2023+. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SoftmaxPG_LB_COLT.pdf">COLT 2021</a> 
+</p>
+</li>
+<li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi,  accepted to <i>Operations Research</i>,  2023+. <a href="publications/SyncQlearning.pdf">[paper]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SyncQlearning_ICML.pdf">ICML 2021</a> 
+</p>
+</li>
 <li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
 Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  accepted to <i>Information and Inference: A Journal of the IMA</i>, 2022. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
+G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  accepted to <i>Information and Inference: A Journal of the IMA</i>, 2023+. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021 <b>(selected as spotlight)</b>
 
 
@@ -108,24 +116,16 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </p>
 </li>
 <li><p><b>Policy Mirror Descent for Regularized Reinforcement Learning: A Generalized Framework with Linear Convergence</b> <br />  
-W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>SIAM Journal on Optimization</i>, 2023. (*=equal contributions) <a href="https://arxiv.org/abs/2105.11066">[paper]</a> 
+W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>SIAM Journal on Optimization</i>, 2023+. (*=equal contributions) <a href="https://arxiv.org/abs/2105.11066">[paper]</a> 
 </p>
 </li>
 <li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>,  2021. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
 </p>
 </li>
-<li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, accepted to <i>Mathematical Programming</i>, 2022. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SoftmaxPG_LB_COLT.pdf">COLT 2021</a> 
-</p>
-</li>
-<li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi,    2021. <a href="publications/SyncQlearning.pdf">[paper]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SyncQlearning_ICML.pdf">ICML 2021</a> 
-</p>
-</li>
 </ol>
 <h2>2020</h2>
 <ol>
-<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>, accepted to <i>Operations Research</i>,  2023. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
+<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>, accepted to <i>Operations Research</i>,  2023+. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/model_base_RL_neurips.pdf">NeurIPS 2020</a>
 </p>
 </li>
@@ -271,7 +271,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-16 15:55:43 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-16 17:34:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
