--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin–Madison as an Assistant Professor of Statistics in 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congratulations, Yuling!! </li>
+    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Changxiao Cai</a> will join University of Michigan--Ann Arbor as an Assistant Professor in Fall 2023. Congratulations, Changxiao!! </li>
+</ul>
+<ul>
+    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin–-Madison as an Assistant Professor in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congratulations, Yuling!! </li>
 </ul>
 <ul>
     <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congratulations, Yanxi!</li>
-</ul>
-<ul>
-    <li>Yuling has been awarded the prestigious <a href="https://orfe.princeton.edu/news/orfe-graduate-student-yuling-yan-awarded-procter-fellowship">Princeton Honorific Fellowship</a>, 2022. Congratulations, Yuling!</li>
 </ul>
 <ul>
     <li>I received the <a href="https://sloan.org/fellowships/2022-Fellows">2022 Alfred P. Sloan Research Fellowship</a>.</li>
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-30 21:16:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-31 13:47:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
