--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Changxiao Cai</a> will join University of Michigan--Ann Arbor as an Assistant Professor in Fall 2023. Congratulations, Changxiao!! </li>
+    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> will join University of Michigan--Ann Arbor as an Assistant Professor in Fall 2023. Congratulations, Changxiao!! </li>
 </ul>
 <ul>
     <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin–-Madison as an Assistant Professor in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congratulations, Yuling!! </li>
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-31 13:47:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-31 13:48:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
