--- a/Group.html
+++ b/Group.html
@@ -57,9 +57,9 @@
 <ul>
 <li><p><a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor in Fall 2023)</p>
 </li>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Assistant professor, Department of Statistics, University of Chicago)</p>
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
 </li>
-<li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Assistant professor, Center for Statistical Science, Tsinghua University)</p>
+<li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
 </li>
 <li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> </p>
 </li>
@@ -77,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-31 14:56:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-31 14:58:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
