--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin–Madison as an Assistant Professor in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
 </ul>
 <ul>
-    <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congratulations, Yanxi!</li>
+    <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congrats, Yanxi!</li>
 </ul>
 <ul>
     <li>I received the <a href="https://sloan.org/fellowships/2022-Fellows">2022 Alfred P. Sloan Research Fellowship</a>.</li>
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-01 14:30:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-01 15:11:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
