--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2023</h2>
 <ol>
+<li><p><b>Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
+G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
 Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/deflated_heteroPCA.pdf">[paper]</a>
 </p>
@@ -271,7 +275,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-01 15:11:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-02 14:26:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
