--- a/Group.html
+++ b/Group.html
@@ -55,7 +55,7 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor in Fall 2023)</p>
+<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor in Fall 2023)</p>
 </li>
 <li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
 </li>
@@ -77,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-02 14:27:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-03 21:14:43 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
