--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 
 <h2>2023</h2>
 <ol>
-<li><p><b>Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
+<li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
 G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
 </p>
 </li>
@@ -275,7 +275,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-13 09:32:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-13 22:40:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
