--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Reinforcement learning</b>
 </p>
 <ul>
-<li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Optimal Reward-Agnostic Exploration in Reinforcement Learning,&rdquo;</a> 2023. 
+<li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning,&rdquo;</a> 2023. 
 </p>
 </li>
 <li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> NeurIPS 2022 <b>(selected as oral)</b>. 
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-13 09:32:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-13 22:40:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
