--- a/Publications_year.html
+++ b/Publications_year.html
@@ -96,7 +96,7 @@ H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal
 <h2>2021</h2>
 <ol>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  accepted to <i>Information and Inference: A Journal of the IMA</i>, 2023+. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
+G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  <i>Information and Inference: A Journal of the IMA</i>, vol. 12, no. 2, pp. 969-1043, June 2023. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021 <b>(selected as spotlight)</b>
 </p>
 </li>
@@ -275,7 +275,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-14 09:30:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-15 09:26:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
